Use overscroll-behavior-y to prevent refresh on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,9 @@
+html {
+    overscroll-behavior-y: contain;
+}
 body {
     background-color:lightcyan;
+    overscroll-behavior-y: contain;
 }
 h1 {
     color:blue;
